--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Nachhaltige Stadtplanung</p>
+        <p>&copy; <span id="current-year"></span> Nachhaltige Stadtplanung</p>
     </footer>
     <script src="script.js"></script>
+    <script>
+        document.getElementById('current-year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
